--- a/Bulk_Simple_Data_Generator_Colab.ipynb
+++ b/Bulk_Simple_Data_Generator_Colab.ipynb
@@ -248,8 +248,7 @@
         "    def create_prompt(self, action: str, action_desc: str, domain: str,\n",
         "                     trigger: str, emotional_state: str, language_style: str,\n",
         "                     sentence_starter: str) -> str:\n",
-        "        \"\"\"Create varied first-person prompt with rich context.\"\"\"
-n",
+        "        \"\"\"Create varied first-person prompt with rich context.\"\"\"\n",
         "        # Randomly decide whether to use sentence starter (50% of the time)\n",
         "        use_starter = random.random() < 0.5\n",
         "        \n",
